tetrate/tis0302/e2e/good-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: good-resource
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "example.com"
