tetrate/tis0302/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-gateway-selector
spec:
  validationFailureAction: Enforce
