tetrate/tis0302/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-check-gateway-selector
spec:
  steps:
    - name: apply-gateway-policy
      try:
        - apply:
            file: ../check-gateway-selector.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-good-resource
      try:
        - apply:
            file: deployment.yaml

    - name: apply-good-resource
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-resource (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
